--- a/src/components/selectBox/SelectBox.module.css
+++ b/src/components/selectBox/SelectBox.module.css
@@ -13,7 +13,7 @@
   .selectbox-container__error {
     font-size: 1.6rem;
     letter-spacing: 0.05rem;
-    color: #ff0000;
+    color: #ff2e2e;
     font-weight: 400; }
   .selectbox-container select {
     display: block;
