--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -8,14 +8,13 @@ $backdropColor: rgba(17, 17, 17, 0.36);
 $veryLightGray: #ddd;
 $gray: darken($white, 50%);
 $success: #008000;
-$error: #ff0000;
+$error: #ff2e2e;
 
 //margins and paddings
 $sectionMargin: 5rem;
 
 //font family
-$spartan: "League Spartan", sans-serif;
-$roboto: "Roboto", sans-serif;
+$poppins: "Poppins", sans-serif;
 
 //animation
 $basic: all 0.2s ease-out;
