--- a/src/basicStyles/index.css
+++ b/src/basicStyles/index.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@300;400;500;600;700;800;900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;900&display=swap");
 *,
 *::before,
 *::after {
@@ -20,7 +19,7 @@ body {
   height: 100%;
   -webkit-font-smoothing: antialiased;
   color: #222222;
-  font-family: "League Spartan", sans-serif;
+  font-family: "Poppins", sans-serif;
   margin: 0 auto; }
 
 #root {
