--- a/src/basicStyles/index.scss
+++ b/src/basicStyles/index.scss
@@ -1,6 +1,5 @@
 @import "../scss/variables";
-@import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@300;400;500;600;700;800;900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;900&display=swap");
 
 *,
 *::before,
@@ -24,7 +23,7 @@ body {
   height: 100%;
   -webkit-font-smoothing: antialiased;
   color: $darkText;
-  font-family: $spartan;
+  font-family: $poppins;
   margin: 0 auto;
 }
 
