--- a/src/components/form/Form.module.css
+++ b/src/components/form/Form.module.css
@@ -12,6 +12,7 @@
     height: 100%;
     padding: 5.5rem 3rem;
     background-color: rgba(34, 34, 34, 0.85);
+    backdrop-filter: blur(0.4rem);
     clip-path: polygon(0 5%, 100% 0, 100% 100%, 0% 100%);
     position: relative;
     transition: all 0.2s ease-out; }
@@ -28,7 +29,7 @@
     .form-container__form__success-message {
       gap: 0 !important;
       color: #fff;
-      padding: 2.5rem;
+      padding: 2rem;
       align-items: center; }
       .form-container__form__success-message__checkbox {
         width: 5rem;
@@ -48,15 +49,14 @@
         font-size: 2rem;
         font-weight: 600;
         text-transform: capitalize;
-        line-height: 1.3;
         text-align: center;
-        margin-bottom: 3rem; }
+        margin-bottom: 2rem; }
       .form-container__form__success-message__details {
-        font-size: 1.7rem;
-        line-height: 1.3;
-        letter-spacing: 0.05rem;
-        font-weight: 500;
-        margin-bottom: 3rem; }
+        font-size: 1.45rem;
+        line-height: 1.4;
+        letter-spacing: 0.02rem;
+        font-weight: 400;
+        margin-bottom: 2.5rem; }
     .form-container__form div[class*="submit-button"] {
       margin-top: 1rem; }
 
