--- a/src/components/hero/Hero.module.scss
+++ b/src/components/hero/Hero.module.scss
@@ -35,7 +35,7 @@
 
     p[class*="subheading"] {
       font-weight: 500;
-      line-height: 1.25;
+      line-height: 1.4;
       letter-spacing: 0.1rem;
       margin-bottom: 2rem;
     }
@@ -43,8 +43,8 @@
     a[class*="plain-button__button"] {
       &:link,
       &:visited {
-        font-weight: 600;
-        text-transform: uppercase;
+        font-weight: 500;
+        text-transform: capitalize;
       }
     }
   }
