--- a/src/components/plainDescriptionBox/PlainDescriptionBox.module.css
+++ b/src/components/plainDescriptionBox/PlainDescriptionBox.module.css
@@ -3,8 +3,9 @@
   height: 100%;
   background-color: #fff; }
   .plain-description-box__description {
-    font-size: 1.7rem;
-    line-height: 1.3;
+    font-size: 1.45rem;
+    line-height: 1.4;
+    letter-spacing: 0.05rem;
     font-family: inherit;
     padding: 0 2.5rem;
     color: gray; }
