--- a/src/components/plainDescriptionBox/PlainDescriptionBox.module.scss
+++ b/src/components/plainDescriptionBox/PlainDescriptionBox.module.scss
@@ -7,8 +7,9 @@
   background-color: $white;
 
   &__description {
-    font-size: 1.7rem;
-    line-height: 1.3;
+    font-size: 1.45rem;
+    line-height: 1.4;
+    letter-spacing: 0.05rem;
     font-family: inherit;
     padding: 0 2.5rem;
     color: $gray;
