--- a/src/components/testimonial/Testimonial.module.css
+++ b/src/components/testimonial/Testimonial.module.css
@@ -14,8 +14,8 @@
     flex-direction: column;
     align-items: flex-end; }
     .testimonial__text-container__one-liner {
-      padding: 1rem;
-      font-size: 2rem;
+      padding: 1rem 1rem 1.25rem;
+      font-size: 1.9rem;
       font-weight: 500;
       color: #0099a8; }
     .testimonial__text-container__details {
@@ -23,17 +23,16 @@
       color: #fff;
       background-color: #af0061;
       width: 100%;
-      padding: 1.5rem;
+      padding: 1.45rem;
       padding-bottom: 2rem;
-      line-height: 1.25;
-      letter-spacing: 0.05rem;
-      margin-bottom: 1rem;
-      font-weight: 400; }
+      line-height: 1.4;
+      letter-spacing: 0.02rem;
+      margin-bottom: 2rem; }
     .testimonial__text-container__person-name {
       padding: 1rem;
-      font-size: 1.6rem;
+      font-size: 1.45rem;
       color: #222222;
-      font-weight: 400;
-      letter-spacing: 0.02rem; }
+      letter-spacing: 0.02rem;
+      font-weight: 400; }
 
 /*# sourceMappingURL=Testimonial.module.css.map */
