--- a/src/components/testimonial/Testimonial.module.scss
+++ b/src/components/testimonial/Testimonial.module.scss
@@ -19,8 +19,8 @@
     align-items: flex-end;
 
     &__one-liner {
-      padding: 1rem;
-      font-size: 2rem;
+      padding: 1rem 1rem 1.25rem;
+      font-size: 1.9rem;
       font-weight: 500;
       color: $secondary;
     }
@@ -30,20 +30,19 @@
       color: $white;
       background-color: $primary;
       width: 100%;
-      padding: 1.5rem;
+      padding: 1.45rem;
       padding-bottom: 2rem;
-      line-height: 1.25;
-      letter-spacing: 0.05rem;
-      margin-bottom: 1rem;
-      font-weight: 400;
+      line-height: 1.4;
+      letter-spacing: 0.02rem;
+      margin-bottom: 2rem;
     }
 
     &__person-name {
       padding: 1rem;
-      font-size: 1.6rem;
+      font-size: 1.45rem;
       color: $darkText;
-      font-weight: 400;
       letter-spacing: 0.02rem;
+      font-weight: 400;
     }
   }
 }
