--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -39,12 +39,12 @@
     margin: 2.5rem auto;
     border-inline: 1px solid #ddd; }
   .our-services h3[class*="heading"] {
-    font-size: 2.2rem; }
+    font-size: 2rem; }
   .our-services p[class*="description"] {
     line-height: 1.4;
-    font-weight: 300;
-    font-size: 1.6rem;
-    color: black;
+    font-weight: 400;
+    font-size: 1.45rem;
+    color: #666666;
     letter-spacing: 0.04rem; }
   .our-services ul {
     display: none !important; }
@@ -53,15 +53,12 @@
   margin-bottom: 5rem; }
   .testimonial div[class*="plain-description-box"] {
     margin-bottom: 3rem;
-    letter-spacing: 0.04rem; }
+    letter-spacing: 0.04rem !important; }
 
 .form-section {
   margin-bottom: 6rem; }
   .form-section div[class*="plain-description-box"] {
     margin-bottom: 1rem;
-    letter-spacing: 0.04rem; }
-  .form-section div[class*="submit-button"] button {
-    font-weight: 600;
-    text-transform: uppercase; }
+    letter-spacing: 0.04rem !important; }
 
 /*# sourceMappingURL=Home.module.css.map */
