--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -61,4 +61,7 @@
     margin-bottom: 1rem;
     letter-spacing: 0.04rem !important; }
 
+.subscribe-mailing-list {
+  margin-bottom: 6rem; }
+
 /*# sourceMappingURL=Home.module.css.map */
