--- a/src/components/mobileFooter/MobileFooter.module.css
+++ b/src/components/mobileFooter/MobileFooter.module.css
@@ -1,32 +1,43 @@
 .mobile-footer {
   background-color: #af0061;
-  padding: 4rem 2rem 3rem; }
+  padding: 0rem 0rem 3rem; }
+  .mobile-footer__address-part {
+    margin-bottom: 3rem;
+    background-position: 50% 50% !important;
+    background-size: cover !important;
+    background-repeat: no-repeat !important;
+    padding: 2rem; }
+  .mobile-footer__address-part > div {
+    width: 72.5%; }
   .mobile-footer__top {
-    margin-bottom: 5rem; }
+    margin-bottom: 5rem;
+    padding: 0 2rem; }
     .mobile-footer__top__links {
       display: flex;
       flex-direction: column;
       gap: 3rem; }
-  .mobile-footer__bottom__image-buttons {
-    display: flex;
-    gap: 1.5rem;
-    margin-bottom: 4rem; }
-  .mobile-footer__bottom__buttons div[class*="link-group"] {
-    margin-bottom: 4rem; }
-    .mobile-footer__bottom__buttons div[class*="link-group"] ul[class*="link-group__list"] {
-      gap: 2rem !important; }
-      .mobile-footer__bottom__buttons div[class*="link-group"] ul[class*="link-group__list"] a:link,
-      .mobile-footer__bottom__buttons div[class*="link-group"] ul[class*="link-group__list"] a:visited {
-        color: #fff;
-        letter-spacing: 0.02rem;
-        font-size: 1.4rem;
-        font-weight: 500; }
-      .mobile-footer__bottom__buttons div[class*="link-group"] ul[class*="link-group__list"] a:hover,
-      .mobile-footer__bottom__buttons div[class*="link-group"] ul[class*="link-group__list"] a:active {
-        color: #fff; }
-  .mobile-footer__bottom__copyright-info--details {
-    color: #fff;
-    font-size: 1.2rem;
-    letter-spacing: 0.05rem; }
+  .mobile-footer__bottom {
+    padding: 0 2rem; }
+    .mobile-footer__bottom__image-buttons {
+      display: flex;
+      gap: 1.5rem;
+      margin-bottom: 4rem; }
+    .mobile-footer__bottom__buttons div[class*="link-group"] {
+      margin-bottom: 4rem; }
+      .mobile-footer__bottom__buttons div[class*="link-group"] ul[class*="link-group__list"] {
+        gap: 2rem !important; }
+        .mobile-footer__bottom__buttons div[class*="link-group"] ul[class*="link-group__list"] a:link,
+        .mobile-footer__bottom__buttons div[class*="link-group"] ul[class*="link-group__list"] a:visited {
+          color: #fff;
+          letter-spacing: 0.02rem;
+          font-size: 1.4rem;
+          font-weight: 500; }
+        .mobile-footer__bottom__buttons div[class*="link-group"] ul[class*="link-group__list"] a:hover,
+        .mobile-footer__bottom__buttons div[class*="link-group"] ul[class*="link-group__list"] a:active {
+          color: #fff; }
+    .mobile-footer__bottom__copyright-info--details {
+      color: #fff;
+      font-size: 1.2rem;
+      letter-spacing: 0.05rem; }
 
 /*# sourceMappingURL=MobileFooter.module.css.map */
