--- a/src/scss/_mixin.scss
+++ b/src/scss/_mixin.scss
@@ -31,6 +31,13 @@
   list-style-type: none;
 }
 
+//link mixins
+@mixin link-reset() {
+  display: inline-block;
+  text-decoration: none;
+  color: inherit;
+}
+
 //flex mixins
 @mixin flexRow() {
   display: flex;
@@ -58,4 +65,11 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, 50%);
+}
+
+//background image mixins
+@mixin bg-cover-center {
+  background-position: 50% 50% !important;
+  background-size: cover !important;
+  background-repeat: no-repeat !important;
 }
