--- a/src/basicStyles/index.scss
+++ b/src/basicStyles/index.scss
@@ -37,3 +37,21 @@ body {
     /* margin-top: auto FOR footer */
   }
 }
+
+@media (max-width: 23em) {
+  html {
+    font-size: 61.5%;
+  }
+}
+
+@media (max-width: 22em) {
+  html {
+    font-size: 59%;
+  }
+}
+
+@media (max-width: 20em) {
+  html {
+    font-size: 55%;
+  }
+}
