--- a/src/components/hero/Hero.module.css
+++ b/src/components/hero/Hero.module.css
@@ -10,6 +10,7 @@
     background-size: cover !important;
     clip-path: polygon(0 0, 100% 0, 100% 95%, 0% 100%); }
   .hero-container div[class*="textbox"] {
+    width: 73%;
     position: absolute;
     top: 50%;
     transform: translateY(-15%);
@@ -30,5 +31,45 @@
     .hero-container div[class*="textbox"] a[class*="plain-button__button"]:link, .hero-container div[class*="textbox"] a[class*="plain-button__button"]:visited {
       font-weight: 500;
       text-transform: capitalize; }
+
+@media (min-width: 26em) {
+  .hero-container {
+    aspect-ratio: initial;
+    height: 55rem; }
+    .hero-container div[class*="textbox"] {
+      width: 30rem; } }
+@media (min-width: 48em) {
+  .hero-container {
+    height: 50rem; }
+    .hero-container div[class*="textbox"] {
+      transform: translateY(-50%); } }
+@media (min-width: 51em) {
+  .hero-container {
+    height: 60rem; }
+    .hero-container .hero-background-image {
+      background-position: 50% 50% !important; }
+    .hero-container div[class*="textbox"] {
+      width: 100%; }
+      .hero-container div[class*="textbox"] h3[class*="heading"] {
+        font-size: 4.5rem;
+        width: 45rem; }
+      .hero-container div[class*="textbox"] p[class*="subheading"] {
+        font-size: 2rem;
+        width: 40rem; } }
+@media (min-width: 62em) {
+  .hero-container {
+    height: 60rem; }
+    .hero-container .hero-background-image {
+      background-position: 50% 50% !important;
+      clip-path: none; }
+    .hero-container div[class*="textbox"] {
+      width: 100%;
+      left: 15%; }
+      .hero-container div[class*="textbox"] h3[class*="heading"] {
+        font-size: 4.5rem;
+        width: 45rem; }
+      .hero-container div[class*="textbox"] p[class*="subheading"] {
+        font-size: 2rem;
+        width: 40rem; } }
 
 /*# sourceMappingURL=Hero.module.css.map */
