--- a/src/components/hero/Hero.module.scss
+++ b/src/components/hero/Hero.module.scss
@@ -16,6 +16,7 @@
   }
 
   div[class*="textbox"] {
+    width: 73%;
     position: absolute;
     top: 50%;
     transform: translateY(-15%);
@@ -49,6 +50,83 @@
     }
   }
 }
+
+@media (min-width: 26em) {
+  .hero-container {
+    aspect-ratio: initial;
+    height: 55rem;
+
+    div[class*="textbox"] {
+      width: 30rem;
+    }
+  }
+}
+
+@media (min-width: 48em) {
+  .hero-container {
+    height: 50rem;
+
+    div[class*="textbox"] {
+      transform: translateY(-50%);
+    }
+  }
+}
+
+@media (min-width: 51em) {
+  .hero-container {
+    height: 60rem;
+
+    .hero-background-image {
+      background-position: 50% 50% !important;
+    }
+
+    div[class*="textbox"] {
+      width: 100%;
+
+      h3[class*="heading"] {
+        font-size: 4.5rem;
+        width: 45rem;
+      }
+
+      p[class*="subheading"] {
+        font-size: 2rem;
+        width: 40rem;
+      }
+    }
+  }
+}
+
+@media (min-width: 62em) {
+  .hero-container {
+    height: 60rem;
+
+    .hero-background-image {
+      background-position: 50% 50% !important;
+      clip-path: none;
+    }
+
+    div[class*="textbox"] {
+      width: 100%;
+      left: 15%;
+
+      h3[class*="heading"] {
+        font-size: 4.5rem;
+        width: 45rem;
+      }
+
+      p[class*="subheading"] {
+        font-size: 2rem;
+        width: 40rem;
+      }
+    }
+  }
+}
+
+// @media (max-width: 22em) {
+//   .hero-container {
+//     aspect-ratio: 16/27;
+//   }
+// }
 
 // @media (max-width: 54em) {
 //   .hero-container {
