--- a/src/basicStyles/App.css
+++ b/src/basicStyles/App.css
@@ -4,6 +4,9 @@
 .highlighted-secondary {
   color: #0099a8; }
 
+.bold {
+  font-weight: 600; }
+
 ul {
   list-style-type: none; }
 
@@ -14,5 +17,12 @@ ul {
     align-items: flex-start; }
     .reverse div[class*="text-container"] p {
       text-align: left; }
+
+.show div[class*="showcase"] div[class*="showcase__imgbox"] {
+  transform: translateX(0%);
+  opacity: 1; }
+.show div[class*="textbox"] {
+  opacity: 1;
+  transform: translate(0%, 0%); }
 
 /*# sourceMappingURL=App.css.map */
