--- a/src/components/imageDescBtn/ImageDescBtn.module.scss
+++ b/src/components/imageDescBtn/ImageDescBtn.module.scss
@@ -38,18 +38,18 @@
 
   &__button-container {
     flex-basis: 20%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: $gray;
-    transition: $basic;
 
     &__button {
       &:link,
       &:visited {
+        @include flex-all-center();
+        width: 100%;
+        height: 100%;
         color: $white;
         font-size: 1.7rem;
         text-decoration: none;
+        background-color: $gray;
+        transition: $basic;
       }
     }
   }
