--- a/src/components/plainDescriptionBox/PlainDescriptionBox.module.scss
+++ b/src/components/plainDescriptionBox/PlainDescriptionBox.module.scss
@@ -3,7 +3,6 @@
 
 .plain-description-box {
   width: 100%;
-  height: 100%;
   background-color: $white;
 
   &__description {
@@ -13,5 +12,15 @@
     font-family: inherit;
     padding: 0 2.5rem;
     color: $gray;
+  }
+}
+
+@media (min-width: 64em) {
+  .plain-description-box {
+    &__description {
+      font-size: 1.6rem !important;
+      line-height: 1.45 !important;
+      font-weight: 300 !important;
+    }
   }
 }
