--- a/src/components/sectionTitle/SectionTitle.module.css
+++ b/src/components/sectionTitle/SectionTitle.module.css
@@ -1,20 +1,34 @@
-.section-title {
-  font-size: 2.5rem;
-  font-weight: 600;
-  padding: 2.5rem 0;
-  margin: 0 2.5rem 2.5rem;
-  color: #222222;
-  letter-spacing: 0.05rem;
-  text-transform: capitalize;
-  position: relative; }
-  .section-title::before {
-    content: "";
-    display: block;
-    position: absolute;
-    width: 15%;
-    height: 0.3rem;
-    background-color: #af0061;
-    bottom: 0;
-    left: 0; }
+.section-title-box {
+  display: block; }
+  .section-title-box__section-title {
+    font-size: 2.5rem;
+    font-weight: 600;
+    padding: 2.5rem 0;
+    margin: 0 2.5rem 2.5rem;
+    color: #222222;
+    letter-spacing: 0.05rem;
+    text-transform: capitalize;
+    position: relative; }
+    .section-title-box__section-title::before {
+      content: "";
+      display: block;
+      position: absolute;
+      width: 4.5rem;
+      height: 0.3rem;
+      background-color: #af0061;
+      bottom: 0;
+      left: 0.3rem; }
+
+@media (min-width: 48em) {
+  .section-title-box {
+    display: flex;
+    flex-direction: row;
+    justify-content: center; }
+    .section-title-box__section-title::before {
+      left: 50%;
+      transform: translateX(-55%); } }
+@media (min-width: 64em) {
+  .section-title-box__section-title {
+    font-size: 4rem; } }
 
 /*# sourceMappingURL=SectionTitle.module.css.map */
