--- a/src/components/sectionTitle/SectionTitle.module.scss
+++ b/src/components/sectionTitle/SectionTitle.module.scss
@@ -1,25 +1,51 @@
 @import "../../scss/variables";
 @import "../../scss/mixin";
 
-.section-title {
-  font-size: 2.5rem;
-  font-weight: 600;
-  padding: 2.5rem 0;
-  margin: 0 2.5rem 2.5rem;
-  color: $darkText;
-  letter-spacing: 0.05rem;
-  text-transform: capitalize;
-  position: relative;
+.section-title-box {
+  display: block;
 
-  &::before {
-    content: "";
-    display: block;
-    position: absolute;
-    width: 15%;
-    height: 0.3rem;
-    background-color: $primary;
-    bottom: 0;
-    left: 0;
+  &__section-title {
+    font-size: 2.5rem;
+    font-weight: 600;
+    padding: 2.5rem 0;
+    margin: 0 2.5rem 2.5rem;
+    color: $darkText;
+    letter-spacing: 0.05rem;
+    text-transform: capitalize;
+    position: relative;
+
+    &::before {
+      content: "";
+      display: block;
+      position: absolute;
+      width: 4.5rem;
+      height: 0.3rem;
+      background-color: $primary;
+      bottom: 0;
+      left: 0.3rem;
+    }
+  }
+}
+
+@media (min-width: 48em) {
+  .section-title-box {
+    @include flexRow();
+    justify-content: center;
+
+    &__section-title {
+      &::before {
+        left: 50%;
+        transform: translateX(-55%);
+      }
+    }
+  }
+}
+
+@media (min-width: 64em) {
+  .section-title-box {
+    &__section-title {
+      font-size: 4rem;
+    }
   }
 }
 
