--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -24,8 +24,7 @@
   margin-bottom: 5rem; }
   .our-services__services {
     display: flex;
-    flex-direction: column;
-    gap: 2rem; }
+    flex-direction: column; }
   .our-services div[class*="showcase__imgbox"] {
     box-shadow: 0 0 1.5rem rgba(34, 34, 34, 0.2); }
   .our-services div[class*="plain-description-box"] {
@@ -42,9 +41,10 @@
     font-weight: 400;
     font-size: 1.45rem;
     color: #666666;
-    letter-spacing: 0.04rem; }
+    letter-spacing: 0.02rem; }
   .our-services ul {
-    display: none !important; }
+    display: none !important;
+    color: #626262; }
 
 .testimonial {
   margin-bottom: 5rem; }
@@ -60,5 +60,113 @@
 
 .subscribe-mailing-list {
   margin-bottom: 6rem; }
+
+@media (min-width: 48em) {
+  .industry-expert {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 6rem;
+    width: 80%;
+    margin-left: auto; }
+    .industry-expert__heading-and-description, .industry-expert__image-descriptions {
+      display: flex;
+      flex-direction: row; }
+    .industry-expert__heading-and-description div[class*="section-title-box"] {
+      flex-basis: 50%;
+      align-items: flex-start;
+      justify-content: left; }
+      .industry-expert__heading-and-description div[class*="section-title-box"] h2[class*="section-title"] {
+        margin: 0 0 2.5rem;
+        text-align: left !important; }
+        .industry-expert__heading-and-description div[class*="section-title-box"] h2[class*="section-title"]::before {
+          left: 0;
+          transform: translateX(0%); }
+    .industry-expert__heading-and-description div[class*="plain-description-box"] {
+      flex-basis: 50%;
+      display: flex;
+      flex-direction: row; }
+      .industry-expert__heading-and-description div[class*="plain-description-box"] p[class*="plain-description-box__description"] {
+        padding: 3.5rem;
+        width: 80%; }
+    .industry-expert__image-descriptions {
+      padding: 0;
+      position: static;
+      margin-bottom: initial; }
+      .industry-expert__image-descriptions div[class*="container"] {
+        height: initial; }
+      .industry-expert__image-descriptions div[class*="darkbutton"] a:link,
+      .industry-expert__image-descriptions div[class*="darkbutton"] a:visited {
+        background-color: #222222; }
+    .industry-expert__image-descriptions > div[class*="container"] {
+      height: 30rem; } }
+@media (min-width: 64em) {
+  .desktop-center {
+    width: 55rem !important;
+    margin: 0 auto;
+    text-align: center; }
+
+  .our-services__service-container {
+    position: relative;
+    display: block;
+    padding: 0;
+    gap: 0;
+    align-items: center;
+    margin: 0 auto;
+    max-width: 120rem;
+    display: flex;
+    flex-direction: row-reverse !important;
+    align-items: center; }
+    .our-services__service-container div[class*="showcase"] {
+      flex-basis: 70%;
+      aspect-ratio: 16/8; }
+      .our-services__service-container div[class*="showcase"] div[class*="showcase__imgbox"] {
+        box-shadow: 0 0 2rem rgba(34, 34, 34, 0.2);
+        transform: translateX(-20%);
+        opacity: 0;
+        transition: all 1s ease-out; }
+    .our-services__service-container div[class*="textbox"] {
+      width: 35rem !important;
+      padding: 2.5rem;
+      margin: 0;
+      border-inline: none;
+      left: 3rem;
+      background-color: rgba(34, 34, 34, 0.9);
+      backdrop-filter: blur(1.5rem);
+      border-bottom: 1rem solid #0099a8;
+      transform: translate(20%, 0%);
+      opacity: 0;
+      transition: all 1s ease-out; }
+    .our-services__service-container h3[class*="heading"] {
+      font-size: 2.8rem;
+      font-weight: 600 !important;
+      line-height: 1.2;
+      margin-bottom: 1.5rem;
+      color: #fff; }
+    .our-services__service-container p[class*="description"] {
+      line-height: 1.5;
+      font-weight: 300;
+      font-size: 1.5rem;
+      margin-bottom: 2.5rem;
+      color: #fff; }
+    .our-services__service-container ul {
+      display: flex !important;
+      flex-direction: column;
+      gap: 2rem;
+      margin-bottom: 3rem; }
+      .our-services__service-container ul li {
+        font-size: 1.5rem;
+        font-weight: 400;
+        color: #fff;
+        text-transform: capitalize; }
+  .our-services__service-container-reverse {
+    display: flex;
+    flex-direction: row !important; }
+    .our-services__service-container-reverse div[class*="showcase"] div[class*="showcase__imgbox"] {
+      transform: translateX(20%); }
+    .our-services__service-container-reverse div[class*="textbox"] {
+      opacity: 0;
+      transform: translate(-20%, 0%);
+      right: 3rem !important;
+      left: initial; } }
 
 /*# sourceMappingURL=Home.module.css.map */
