--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,6 +1,8 @@
 @import "../../scss/variables";
 @import "../../scss/mixin";
 
+//390px styles
+
 .industry-expert {
   display: flex;
   flex-direction: column;
@@ -13,7 +15,7 @@
 
   &__heading-and-description {
     div[class*="plain-description-box"] {
-      flex-basis: 40rem;
+      flex-basis: 40rem; //working as height here
       width: 60%;
       background-color: $primary;
 
@@ -27,8 +29,8 @@
   &__image-descriptions {
     padding: 0 2.5rem;
     position: relative;
-    top: -23rem;
-    margin-bottom: -23rem;
+    top: -23rem; // positioning the element above its top element
+    margin-bottom: -23rem; //negative margin to keep the whitespace in balance
 
     div[class*="container"] {
       height: 37.5rem;
@@ -41,7 +43,6 @@
 
   &__services {
     @include flexColumn();
-    gap: 2rem;
   }
 
   div[class*="showcase__imgbox"] {
@@ -68,11 +69,12 @@
     font-weight: 400;
     font-size: 1.45rem;
     color: darken($gray, 10%);
-    letter-spacing: 0.04rem;
+    letter-spacing: 0.02rem;
   }
 
   ul {
     display: none !important;
+    color: lighten($darkText, 25%);
   }
 }
 
@@ -98,24 +100,163 @@
   margin-bottom: 6rem;
 }
 
-// @media (max-width: 23em) {
-//   .industry-expert {
-//     &__image-descriptions {
-//       top: -21rem;
-//       margin-bottom: -21rem;
-//     }
-//   }
-// }
+@media (min-width: 48em) {
+  .industry-expert {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 6rem;
+    width: 80%;
+    margin-left: auto;
 
-// @media (max-width: 22em) {
-//   .industry-expert {
-//     &__image-descriptions {
-//       top: -17rem;
-//       margin-bottom: -17rem;
+    &__heading-and-description,
+    &__image-descriptions {
+      @include flexRow();
+    }
 
-//       div[class*="container"] {
-//         height: 35rem;
-//       }
-//     }
-//   }
-// }
+    &__heading-and-description {
+      div[class*="section-title-box"] {
+        flex-basis: 50%;
+        align-items: flex-start;
+        justify-content: left;
+
+        h2[class*="section-title"] {
+          margin: 0 0 2.5rem;
+          text-align: left !important;
+          &::before {
+            left: 0;
+            transform: translateX(0%);
+          }
+        }
+      }
+
+      div[class*="plain-description-box"] {
+        flex-basis: 50%;
+        @include flexRow();
+
+        p[class*="plain-description-box__description"] {
+          padding: 3.5rem;
+          width: 80%;
+        }
+      }
+    }
+
+    &__image-descriptions {
+      padding: 0;
+      position: static;
+      margin-bottom: initial;
+
+      div[class*="container"] {
+        height: initial;
+      }
+
+      div[class*="darkbutton"] {
+        a:link,
+        a:visited {
+          background-color: $darkText;
+        }
+      }
+    }
+
+    &__image-descriptions > div[class*="container"] {
+      height: 30rem;
+    }
+  }
+}
+
+@media (min-width: 64em) {
+  .desktop-center {
+    width: 55rem !important;
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  .our-services {
+    &__service-container {
+      position: relative;
+      display: block;
+      padding: 0;
+      gap: 0;
+      align-items: center;
+      margin: 0 auto;
+      max-width: 120rem;
+      @include flexRow-r;
+      align-items: center;
+
+      div[class*="showcase"] {
+        flex-basis: 70%;
+        aspect-ratio: 16/8;
+
+        div[class*="showcase__imgbox"] {
+          box-shadow: 0 0 2rem rgba($darkText, 0.2);
+          transform: translateX(-20%);
+          opacity: 0;
+          transition: all 1s ease-out;
+        }
+      }
+
+      div[class*="textbox"] {
+        width: 35rem !important;
+        padding: 2.5rem;
+        margin: 0;
+        border-inline: none;
+        // position: absolute;
+
+        left: 3rem;
+        background-color: rgba($darkText, 0.9);
+        backdrop-filter: blur(1.5rem);
+        border-bottom: 1rem solid $secondary;
+        transform: translate(20%, 0%);
+        opacity: 0;
+        transition: all 1s ease-out;
+      }
+
+      h3[class*="heading"] {
+        font-size: 2.8rem;
+        font-weight: 600 !important;
+        line-height: 1.2;
+        margin-bottom: 1.5rem;
+        color: $white;
+      }
+
+      p[class*="description"] {
+        line-height: 1.5;
+        font-weight: 300;
+        font-size: 1.5rem;
+        margin-bottom: 2.5rem;
+        color: $white;
+      }
+
+      ul {
+        display: flex !important ;
+        flex-direction: column;
+        gap: 2rem;
+        margin-bottom: 3rem;
+
+        li {
+          font-size: 1.5rem;
+          font-weight: 400;
+          color: $white;
+          text-transform: capitalize;
+        }
+      }
+    }
+
+    &__service-container-reverse {
+      display: flex;
+      flex-direction: row !important;
+      div[class*="showcase"] {
+        div[class*="showcase__imgbox"] {
+          transform: translateX(20%);
+        }
+      }
+
+      div[class*="textbox"] {
+        opacity: 0;
+
+        transform: translate(-20%, 0%);
+        right: 3rem !important;
+        left: initial;
+      }
+    }
+  }
+}
