--- a/src/components/hero/Hero.module.scss
+++ b/src/components/hero/Hero.module.scss
@@ -79,14 +79,13 @@
 @media (min-width: 51em) {
   .hero-container {
     height: 60rem;
+    aspect-ratio: initial;
 
     .hero-background-image {
       background-position: 50% 50% !important;
     }
 
     div[class*="textbox"] {
-      width: 100%;
-
       h3[class*="heading"] {
         font-size: 4.5rem;
         width: 45rem;
@@ -100,16 +99,16 @@
   }
 }
 
-@media (min-width: 62em) {
+@media (min-width: 64em) {
   .hero-container {
     height: 60rem;
+    aspect-ratio: initial;
 
     .hero-background-image {
       background-position: 50% 50% !important;
     }
 
     div[class*="textbox"] {
-      width: 100%;
       left: 15%;
 
       h3[class*="heading"] {
