--- a/src/components/onlyDesignDiv/OnlyDesignDiv.module.scss
+++ b/src/components/onlyDesignDiv/OnlyDesignDiv.module.scss
@@ -2,7 +2,8 @@
 @import "../../scss/mixin";
 
 .only-design-div {
-  padding: 6rem 0;
+  padding: 4rem 0;
+  // padding-bottom: 4rem;
   @include flexRow();
   justify-content: center;
   align-items: center;
