--- a/src/components/plainDescriptionBox/PlainDescriptionBox.module.scss
+++ b/src/components/plainDescriptionBox/PlainDescriptionBox.module.scss
@@ -4,6 +4,7 @@
 .plain-description-box {
   width: 100%;
   background-color: $white;
+  margin-bottom: 3rem;
 
   &__description {
     font-size: 1.45rem;
@@ -17,6 +18,7 @@
 
 @media (min-width: 64em) {
   .plain-description-box {
+    margin-bottom: 4rem !important;
     &__description {
       font-size: 1.6rem !important;
       line-height: 1.45 !important;
