--- a/src/components/testimonial/Testimonial.module.css
+++ b/src/components/testimonial/Testimonial.module.css
@@ -35,4 +35,52 @@
       letter-spacing: 0.02rem;
       font-weight: 400; }
 
+@media (min-width: 64em) {
+  .testimonial {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+    background-color: #af0061;
+    transform: translateY(5rem);
+    opacity: 0; }
+    .testimonial__img {
+      width: 17.5rem;
+      height: 17.5rem;
+      border-radius: 50%;
+      flex-basis: unset;
+      aspect-ratio: unset;
+      background-size: cover !important;
+      border: 1rem solid #fff;
+      background-position: 50% 0% !important;
+      transform: translateY(-3rem);
+      margin-bottom: -3rem; }
+    .testimonial__text-container {
+      padding: 2.5rem;
+      flex-grow: 1;
+      display: flex;
+      flex-direction: column;
+      align-items: stretch;
+      color: #fff; }
+      .testimonial__text-container__one-liner {
+        padding: 0;
+        font-size: 2.15rem;
+        line-height: 1.2;
+        color: inherit;
+        margin: 0;
+        margin-bottom: 2rem;
+        text-align: center !important; }
+      .testimonial__text-container__details {
+        font-size: 1.5rem;
+        color: inherit;
+        padding: 0;
+        margin-bottom: 4rem; }
+      .testimonial__text-container__person-name {
+        padding: 0;
+        margin-top: auto;
+        font-size: 1.5rem;
+        color: inherit;
+        font-weight: 500;
+        align-self: flex-end !important; } }
+
 /*# sourceMappingURL=Testimonial.module.css.map */
