--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -28,7 +28,7 @@
   .our-services div[class*="showcase__imgbox"] {
     box-shadow: 0 0 1.5rem rgba(34, 34, 34, 0.2); }
   .our-services div[class*="plain-description-box"] {
-    margin-bottom: 2.5rem; }
+    margin-bottom: 3rem; }
   .our-services div[class*="textbox"] {
     width: 72%;
     padding: 0 2.5rem;
@@ -50,7 +50,7 @@
   margin-bottom: 5rem; }
   .testimonial div[class*="plain-description-box"] {
     margin-bottom: 3rem;
-    letter-spacing: 0.04rem !important; }
+    letter-spacing: 0.02rem !important; }
 
 .form-section {
   margin-bottom: 6rem; }
@@ -110,43 +110,40 @@
     display: block;
     padding: 0;
     gap: 0;
+    max-width: 120rem;
     margin: 0 auto;
-    max-width: 110rem;
     display: flex;
-    flex-direction: row-reverse !important;
-    align-items: center; }
+    align-items: center;
+    gap: 5rem; }
     .our-services__service-container div[class*="showcase"] {
-      flex-basis: 70%;
+      flex-basis: 50%;
       aspect-ratio: 16/8; }
       .our-services__service-container div[class*="showcase"] div[class*="showcase__imgbox"] {
         box-shadow: 0 0 2rem rgba(34, 34, 34, 0.2);
-        transform: translateX(-20%);
+        transform: translateX(-10%);
         opacity: 0;
-        transition: all 1s ease-out; }
+        transition: all 0.8s ease-out; }
     .our-services__service-container div[class*="textbox"] {
-      width: 35rem !important;
+      flex-basis: 50%;
       padding: 2.5rem;
       margin: 0;
       border-inline: none;
       left: 3rem;
-      background-color: rgba(34, 34, 34, 0.9);
-      backdrop-filter: blur(1.5rem);
-      border-bottom: 1rem solid #0099a8;
-      transform: translate(20%, 0%);
+      transform: translate(10%, 0%);
       opacity: 0;
-      transition: all 1s ease-out; }
+      transition: all 0.8s ease-out; }
     .our-services__service-container h3[class*="heading"] {
-      font-size: 2.8rem;
-      font-weight: 600 !important;
+      font-size: 3rem;
+      font-weight: 500 !important;
       line-height: 1.2;
       margin-bottom: 1.5rem;
-      color: #fff; }
+      color: #222222; }
     .our-services__service-container p[class*="description"] {
       line-height: 1.5;
       font-weight: 300;
       font-size: 1.5rem;
       margin-bottom: 2.5rem;
-      color: #fff; }
+      color: #222222; }
     .our-services__service-container ul {
       display: flex !important;
       flex-direction: column;
@@ -155,17 +152,28 @@
       .our-services__service-container ul li {
         font-size: 1.5rem;
         font-weight: 400;
-        color: #fff;
+        color: #222222;
         text-transform: capitalize; }
   .our-services__service-container-reverse {
-    display: flex;
-    flex-direction: row !important; }
+    flex-direction: row-reverse; }
     .our-services__service-container-reverse div[class*="showcase"] div[class*="showcase__imgbox"] {
-      transform: translateX(20%); }
+      transform: translateX(10%); }
     .our-services__service-container-reverse div[class*="textbox"] {
       opacity: 0;
-      transform: translate(-20%, 0%);
+      transform: translate(-10%, 0%);
       right: 3rem !important;
-      left: initial; } }
+      left: initial; }
+
+  .testimonial {
+    max-width: 120rem;
+    margin: 0 auto;
+    margin-bottom: 5rem;
+    opacity: 0;
+    transform: translateY(5rem);
+    transition: all 0.4s ease-out; }
+    .testimonial__all-testimonials {
+      display: grid !important;
+      grid-template-columns: repeat(auto-fill, minmax(25rem, 1fr));
+      gap: 3rem; } }
 
 /*# sourceMappingURL=Home.module.css.map */
