--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -50,7 +50,7 @@
   }
 
   div[class*="plain-description-box"] {
-    margin-bottom: 2.5rem;
+    margin-bottom: 3rem;
   }
 
   div[class*="textbox"] {
@@ -83,7 +83,7 @@
 
   div[class*="plain-description-box"] {
     margin-bottom: 3rem;
-    letter-spacing: 0.04rem !important;
+    letter-spacing: 0.02rem !important;
   }
 }
 
@@ -176,46 +176,41 @@
       display: block;
       padding: 0;
       gap: 0;
-
+      max-width: 120rem;
       margin: 0 auto;
-      max-width: 110rem;
-      @include flexRow-r;
+      display: flex;
       align-items: center;
+      gap: 5rem;
 
       div[class*="showcase"] {
-        flex-basis: 70%;
+        flex-basis: 50%;
         aspect-ratio: 16/8;
 
         div[class*="showcase__imgbox"] {
           box-shadow: 0 0 2rem rgba($darkText, 0.2);
-          transform: translateX(-20%);
+          transform: translateX(-10%);
           opacity: 0;
-          transition: all 1s ease-out;
+          transition: all 0.8s ease-out;
         }
       }
 
       div[class*="textbox"] {
-        width: 35rem !important;
+        flex-basis: 50%;
         padding: 2.5rem;
         margin: 0;
         border-inline: none;
-        // position: absolute;
-
         left: 3rem;
-        background-color: rgba($darkText, 0.9);
-        backdrop-filter: blur(1.5rem);
-        border-bottom: 1rem solid $secondary;
-        transform: translate(20%, 0%);
+        transform: translate(10%, 0%);
         opacity: 0;
-        transition: all 1s ease-out;
+        transition: all 0.8s ease-out;
       }
 
       h3[class*="heading"] {
-        font-size: 2.8rem;
-        font-weight: 600 !important;
+        font-size: 3rem;
+        font-weight: 500 !important;
         line-height: 1.2;
         margin-bottom: 1.5rem;
-        color: $white;
+        color: $darkText;
       }
 
       p[class*="description"] {
@@ -223,7 +218,7 @@
         font-weight: 300;
         font-size: 1.5rem;
         margin-bottom: 2.5rem;
-        color: $white;
+        color: $darkText;
       }
 
       ul {
@@ -235,28 +230,42 @@
         li {
           font-size: 1.5rem;
           font-weight: 400;
-          color: $white;
+          color: $darkText;
           text-transform: capitalize;
         }
       }
     }
 
     &__service-container-reverse {
-      display: flex;
-      flex-direction: row !important;
+      flex-direction: row-reverse;
+
       div[class*="showcase"] {
         div[class*="showcase__imgbox"] {
-          transform: translateX(20%);
+          transform: translateX(10%);
         }
       }
 
       div[class*="textbox"] {
         opacity: 0;
-
-        transform: translate(-20%, 0%);
+        transform: translate(-10%, 0%);
         right: 3rem !important;
         left: initial;
       }
+    }
+  }
+
+  .testimonial {
+    max-width: 120rem;
+    margin: 0 auto;
+    margin-bottom: $sectionMargin;
+    opacity: 0;
+    transform: translateY(5rem);
+    transition: all 0.4s ease-out;
+
+    &__all-testimonials {
+      display: grid !important;
+      grid-template-columns: repeat(auto-fill, minmax(25rem, 1fr));
+      gap: 3rem;
     }
   }
 }
