--- a/src/components/form/Form.module.css
+++ b/src/components/form/Form.module.css
@@ -1,35 +1,44 @@
 .form-container {
+  position: relative;
   width: 100%;
   aspect-ratio: 16/22;
-  background-repeat: no-repeat !important;
-  background-position: 50% 100% !important;
-  background-size: cover !important;
   clip-path: polygon(0 5%, 100% 0, 100% 100%, 0% 100%);
-  padding: 2.5rem; }
+  padding: 2.5rem;
+  overflow: hidden !important;
+  backdrop-filter: blur(0px); }
+  .form-container__imgbox {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-repeat: no-repeat !important;
+    background-position: 50% 100% !important;
+    background-size: cover !important; }
   .form-container__form {
     display: block;
     width: 100%;
     height: 100%;
-    padding: 5.5rem 3rem;
     background-color: rgba(34, 34, 34, 0.85);
     backdrop-filter: blur(0.4rem);
-    clip-path: polygon(0 5%, 100% 0, 100% 100%, 0% 100%);
+    clip-path: polygon(0 5%, 100% 0, 100% 100%, 0% 100%) !important;
     position: relative;
-    transition: all 0.2s ease-out; }
+    transition: all 0.2s ease-out;
+    overflow: hidden !important; }
     .form-container__form__basic-information, .form-container__form__additional-information, .form-container__form__success-message {
       display: flex;
       flex-direction: column;
       width: 100%;
       position: absolute;
       gap: 2.5rem;
-      top: 5.5rem;
+      top: 0;
       left: 0;
-      padding: 0 3rem;
+      padding: 5.5rem 3rem;
       transition: all 0.4s; }
     .form-container__form__success-message {
       gap: 0 !important;
       color: #fff;
-      padding: 2rem;
+      padding: 3rem;
       align-items: center; }
       .form-container__form__success-message__checkbox {
         width: 5rem;
@@ -74,7 +83,29 @@
   transition: all 0.4s; }
 
 @media (max-width: 24em) {
-  .form-container__form {
-    height: 110%; } }
+  .form-container {
+    aspect-ratio: 16/24; }
+    .form-container__form__basic-information, .form-container__form__additional-information, .form-container__form__success-message {
+      padding: 5.5rem 2.2rem; } }
+@media (min-width: 27em) {
+  .form-container {
+    aspect-ratio: 16/21 !important; } }
+@media (min-width: 30em) {
+  .form-container {
+    aspect-ratio: 16/18 !important; }
+    .form-container__form__basic-information, .form-container__form__additional-information, .form-container__form__success-message {
+      padding: 5.5rem 3rem; } }
+@media (min-width: 37em) {
+  .form-container {
+    aspect-ratio: 16/15 !important; }
+    .form-container__form label {
+      font-size: 1.7rem; }
+      .form-container__form label input::placeholder {
+        font-size: 1.5rem !important; }
+      .form-container__form label p[class*="error"],
+      .form-container__form label p[class*="success"] {
+        font-size: 1.5rem !important; }
+    .form-container__form__basic-information, .form-container__form__additional-information, .form-container__form__success-message {
+      padding: 5.5rem 4rem; } }
 
 /*# sourceMappingURL=Form.module.css.map */
