--- a/src/components/form/Form.module.scss
+++ b/src/components/form/Form.module.scss
@@ -2,24 +2,37 @@
 @import "../../scss/mixin";
 
 .form-container {
+  position: relative;
   width: 100%;
   aspect-ratio: 16/22;
-  background-repeat: no-repeat !important;
-  background-position: 50% 100% !important;
-  background-size: cover !important;
   clip-path: polygon(0 5%, 100% 0, 100% 100%, 0% 100%);
   padding: 2.5rem;
+  overflow: hidden !important;
+  backdrop-filter: blur(
+    0px
+  ); // because the blur filter of form element extends beyond the clipped path
+
+  &__imgbox {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-repeat: no-repeat !important;
+    background-position: 50% 100% !important;
+    background-size: cover !important;
+  }
 
   &__form {
     display: block;
     width: 100%;
     height: 100%;
-    padding: 5.5rem 3rem;
     background-color: rgba($darkText, 0.85);
     backdrop-filter: blur(0.4rem);
-    clip-path: polygon(0 5%, 100% 0, 100% 100%, 0% 100%);
+    clip-path: polygon(0 5%, 100% 0, 100% 100%, 0% 100%) !important;
     position: relative;
     transition: $basic;
+    overflow: hidden !important;
 
     &__basic-information,
     &__additional-information,
@@ -28,16 +41,16 @@
       width: 100%;
       position: absolute;
       gap: 2.5rem;
-      top: 5.5rem;
+      top: 0;
       left: 0;
-      padding: 0 3rem;
+      padding: 5.5rem 3rem;
       transition: all 0.4s;
     }
 
     &__success-message {
       gap: 0 !important;
       color: $white;
-      padding: 2rem;
+      padding: 3rem;
       align-items: center;
 
       &__checkbox {
@@ -97,16 +110,66 @@
 
 @media (max-width: 24em) {
   .form-container {
+    aspect-ratio: 16/24;
+
     &__form {
-      height: 110%;
+      &__basic-information,
+      &__additional-information,
+      &__success-message {
+        padding: 5.5rem 2.2rem;
+      }
     }
   }
 }
 
-// @media (max-width: 20em) {
+@media (min-width: 27em) {
+  .form-container {
+    aspect-ratio: 16/21 !important;
+  }
+}
+@media (min-width: 30em) {
+  .form-container {
+    aspect-ratio: 16/18 !important;
+
+    &__form {
+      &__basic-information,
+      &__additional-information,
+      &__success-message {
+        padding: 5.5rem 3rem;
+      }
+    }
+  }
+}
+
+@media (min-width: 37em) {
+  .form-container {
+    aspect-ratio: 16/15 !important;
+
+    &__form {
+      label {
+        font-size: 1.7rem;
+
+        input::placeholder {
+          font-size: 1.5rem !important;
+        }
+
+        p[class*="error"],
+        p[class*="success"] {
+          font-size: 1.5rem !important;
+        }
+      }
+
+      &__basic-information,
+      &__additional-information,
+      &__success-message {
+        padding: 5.5rem 4rem;
+      }
+    }
+  }
+}
+
+// @media (min-width: 31em) {
 //   .form-container {
-//     &__form {
-//       height: 130%;
-//     }
+//     aspect-ratio: 16/19;
 //   }
 // }
