--- a/src/components/sectionTitle/SectionTitle.module.css
+++ b/src/components/sectionTitle/SectionTitle.module.css
@@ -19,14 +19,16 @@
       bottom: 0;
       left: 0.3rem; }
 
-@media (min-width: 48em) {
+@media (min-width: 37em) {
   .section-title-box {
     display: flex;
     flex-direction: row;
     justify-content: center; }
-    .section-title-box__section-title::before {
-      left: 50%;
-      transform: translateX(-55%); } }
+    .section-title-box__section-title {
+      font-size: 3rem; }
+      .section-title-box__section-title::before {
+        left: 50%;
+        transform: translateX(-55%); } }
 @media (min-width: 64em) {
   .section-title-box__section-title {
     font-size: 4rem; } }
