--- a/src/components/testimonial/Testimonial.module.css
+++ b/src/components/testimonial/Testimonial.module.css
@@ -35,8 +35,9 @@
       letter-spacing: 0.02rem;
       font-weight: 400; }
 
-@media (min-width: 64em) {
+@media (min-width: 37em) {
   .testimonial {
+    width: 28rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -51,7 +52,7 @@
       flex-basis: unset;
       aspect-ratio: unset;
       background-size: cover !important;
-      border: 1rem solid #fff;
+      border: 0.6rem solid #fff;
       background-position: 50% 0% !important;
       transform: translateY(-3rem);
       margin-bottom: -3rem; }
